--- a/src/pages/netlify-forms.astro
+++ b/src/pages/netlify-forms.astro
@@ -70,6 +70,8 @@ import Layout from '../components/layout.astro';
       name="contact"
       action="/success"
       data-netlify="true"
+      netlify-honeypot="bot-field"
+      data-netlify-recaptcha="true"
     >
       <label htmlFor="name">Name</label>
       <input type="text" id="name" name="name" />
